Add realization business logic for 3-4 entities and rename some fields
