# src/main/java/ru/danil/springtest/controller/UserController.java
@@ -7,7 +7,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
-import ru.danil.springtest.api.UserApi;
+import ru.danil.springtest.api.UserAndOrdersApi;
 import ru.danil.springtest.dto.UserDTO;
 import ru.danil.springtest.model.User;
 import ru.danil.springtest.service.UserService;
@@ -16,7 +16,7 @@ import java.util.UUID;
 
 @RestController
 @AllArgsConstructor
-public class UserController implements  UserApi {
+public class UserController implements UserAndOrdersApi {
 
     private final UserService userService;
     private final ModelMapper modelMapper;
@@ -30,14 +30,14 @@ public class UserController implements  UserApi {
 
     @Override
     public ResponseEntity<UserDTO> createNewUser(@Valid UserDTO userDTO) {
-        userService.createNewUser(convertToUser(userDTO));
-        return ResponseEntity.status(HttpStatus.CREATED).body(userDTO);
+        User user = userService.createNewUser(convertToUser(userDTO));
+        return ResponseEntity.status(HttpStatus.CREATED).body(convertToUserDTO(user));
     }
 
 
     @Override
-    public ResponseEntity<UserDTO> usernameUpdate(UUID id,@Valid UserDTO userDTO) {
-        userService.usernameUpdate(id, convertToUser(userDTO));
+    public ResponseEntity<UserDTO> userUpdate(UUID id,@Valid UserDTO userDTO) {
+        userService.userUpdate(id, convertToUser(userDTO));
         return ResponseEntity.ok(userDTO);
     }
 
